amazon-sqs/5.5/modules/ROOT/pages/index.adoc
= Amazon SQS Connector - Mule 4
:page-aliases: connectors::amazon/amazon-sqs-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Amazon SQS Connector Version v5.5.0

Anypoint Connector for Amazon SQS (Amazon SQS Connector) provides an easy way to interface with the Amazon Simple Queue Service (Amazon SQS) API, enabling Mule users to manage SQS queueing services without having to interact with the API directly.

Amazon SQS offers a reliable, highly scalable hosted queue for storing messages as they travel between computers. By using Amazon SQS, developers can move data between distributed application components and perform different tasks without losing messages or requiring each component to be always available. Amazon SQS makes it easy to build an automated workflow that works closely with Amazon Elastic Compute Cloud (Amazon EC2) and other AWS infrastructure web services.

The AWS SDK for Java provides a Java API for AWS infrastructure services. Amazon SQS Connector is built using the SDK for Java.

Release Notes: xref:release-notes::connector/amazon-sqs-connector-release-notes-mule-4.adoc[Amazon SQS Connector Release Notes] +
Exchange: https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-amazon-sqs-connector/[Amazon SQS Connector]


== Queue Support

Amazon SQS Connector provides support for two types of queues:

* Standard Queues
+
Standard queues have high throughput. However, using these queues can occasionally result in having duplicate copies of messages delivered out of order.
+
* FIFO Queues
+
FIFO (First-In-First-Out) queues deliver messages in the order in which they are sent. However, these queues have limited throughput.

For information about creating FIFO queues, see xref:amazon-sqs-connector-config-topics.adoc[Additional Configuration Topics].

== About Connectors

Anypoint Connectors are Mule runtime engine extensions that enable you to connect to APIs and resources on external systems, such as Salesforce, Amazon SQS, ServiceNow, and Twitter.

== Prerequisites

Before creating an app, you must:

* Have access to the Amazon SQS target resource and Anypoint Platform.
* Understand how to create a Mule app using Design Center or Anypoint Studio.
* Have AWS Identity and Access Management (IAM) credentials.


== Compatibility

Amazon SQS Connector v5.5.0 is compatible with:

[%header%autowidth.spread]
|===
|Application/Service |Version
|Mule Runtime |4.1.x
|AWS SDK for Java |1.11.649
|===

== Audience

Read the Amazon SQS Connector documentation that meets the needs of the type of user that you are:

* Starting user
** To create your Mule app:
see xref:amazon-sqs-connector-design-center.adoc[Design Center Configuration]
or xref:amazon-sqs-connector-studio.adoc[Studio Configuration]. The xref:amazon-sqs-connector-config-topics.adoc[Additional Configuration Information]
topic helps extend your understanding of Amazon SQS Connector
** The xref:amazon-sqs-connector-examples.adoc[Examples] topic provides one or more use cases for using the connector.
* Power user
** Read the xref:amazon-sqs-connector-xml-maven.adoc[XML and Maven Support],
xref:amazon-sqs-connector-config-topics.adoc[Additional Configuration Information],
and xref:amazon-sqs-connector-examples.adoc[Examples] topics.

== Common Use Cases for the Connector

Common use cases for Amazon SQS Connector include sending messages to a queue and retrieving messages from a queue. For an example of these use cases, see xref:amazon-sqs-connector-examples.adoc#install-connector[Amazon SQS Examples].

== Next Step

After you have met the prerequisites and experimented with examples, you are ready to create an app with
xref:amazon-sqs-connector-design-center.adoc[Design Center] or xref:amazon-sqs-connector-studio.adoc[Anypoint Studio].

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
