amazon-sqs/5.6/modules/ROOT/pages/index.adoc
= Amazon SQS Connector 5.6 - Mule 4
:page-aliases: connectors::amazon/amazon-sqs-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Amazon SQS (Amazon SQS Connector) provides an easy way to interface with the Amazon Simple Queue Service (Amazon SQS) API, enabling Mule users to manage SQS queueing services without having to interact with the API directly.

Amazon SQS offers a reliable, highly scalable hosted queue for storing messages as they travel between computers. You can use Amazon SQS to move data between distributed application components and perform different tasks without losing messages or requiring each component to be always available. Amazon SQS makes it easy to build an automated workflow that works closely with Amazon Elastic Compute Cloud (Amazon EC2) and other AWS infrastructure web services.

The AWS SDK for Java provides a Java API for AWS infrastructure services. Amazon SQS Connector is built using the SDK for Java.

For compatibility information and fixed issues, see the xref:release-notes::connector/amazon-sqs-connector-release-notes-mule-4.adoc[Amazon SQS Connector Release Notes].

== Cluster Mode

Amazon SQS Connector supports listening for messages on the primary node only or on all nodes when running in cluster mode. For information, see xref:amazon-sqs-connector-config-topics.adoc#node-behavior[Receiving Messages in Cluster Mode].

== Queue Support

Amazon SQS Connector provides support for two types of queues:

* Standard Queues
+
Standard queues have high throughput. However, using these queues can occasionally result in having duplicate copies of messages delivered out of order.
+
* FIFO Queues
+
FIFO (First-In-First-Out) queues deliver messages in the order in which they are sent. However, these queues have limited throughput.

For information about creating FIFO queues, see xref:amazon-sqs-connector-config-topics.adoc[Additional Configuration Topics].

== Prerequisites

Before creating an app, you must:

* Have access to the Amazon SQS target resource and Anypoint Platform.
* Understand how to create a Mule app using Design Center or Anypoint Studio.
* Have AWS Identity and Access Management (IAM) credentials.

== Test Connection

In order to test the connection, you must specify a value for the `Test Queue Arn` field in the configuration. If a value is not specified, the test connection is not perfomed, and the console displays a warning when the operation is invoked.

== Audience

Read the Amazon SQS Connector documentation that meets the needs of the type of user that you are:

* Starting user
** To create your Mule app, see xref:amazon-sqs-connector-studio.adoc[Studio Configuration]. The xref:amazon-sqs-connector-config-topics.adoc[Additional Configuration Information]
topic helps extend your understanding of Amazon SQS Connector
** The xref:amazon-sqs-connector-examples.adoc[Examples] topic provides one or more use cases for using the connector.
* Power user
** Read the xref:amazon-sqs-connector-xml-maven.adoc[XML and Maven Support],
xref:amazon-sqs-connector-config-topics.adoc[Additional Configuration Information],
and xref:amazon-sqs-connector-examples.adoc[Examples] topics.

== Common Use Cases for the Connector

Common use cases for Amazon SQS Connector include sending messages to a queue and retrieving messages from a queue. For an example of these use cases, see xref:amazon-sqs-connector-examples.adoc#install-connector[Amazon SQS Examples].

== Next Step

After you have met the prerequisites and experimented with examples, you are ready to create an app with xref:amazon-sqs-connector-studio.adoc[Anypoint Studio] or Flow Designer.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-amazon-sqs-connector/[Amazon SQS Connector on Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
